Revert "Search - introduce top visible types"
This reverts commit efde801caf7ea4f0168e8e68bff323a803249f55.

--- a/OsmAnd/AndroidManifest.xml
+++ b/OsmAnd/AndroidManifest.xml
@@ -39,7 +39,7 @@
 	<uses-feature android:name="android.hardware.bluetooth" android:required="false" />
 	<uses-feature android:name="com.sec.feature.spen_usp" android:required="false"/>
 
-	<uses-sdk android:targetSdkVersion="26"
+	<uses-sdk android:targetSdkVersion="26" android:minSdkVersion="15"
 		tools:overrideLibrary="com.getkeepsafe.taptargetview, studio.carbonylgroup.textfieldboxes, android.support.customtabs"/>
 
 	<supports-screens android:resizeable="true" android:smallScreens="true" android:normalScreens="true" android:largeScreens="true"
