--- a/gradle.properties
+++ b/gradle.properties
@@ -18,4 +18,4 @@
 # for enableD8=true min sdk must be > 22
 # UPDATE: temporairly commented since gradle plugin updated to 3.1.3 and claims INSTALL_FAILED_DEXOPT is fixed
 # UPDATE 2: D8 causes problems on arm64 devices with Android 6.0 (API 23)
-#android.enableD8=false
+ android.enableD8=false
