--- a/OsmAnd-java/build.gradle
+++ b/OsmAnd-java/build.gradle
@@ -6,8 +6,8 @@ configurations {
 }
 
 tasks.withType(JavaCompile) {
-	sourceCompatibility = "1.7"
-	targetCompatibility = "1.7"
+	sourceCompatibility = "1.8"
+	targetCompatibility = "1.8"
 	options.encoding = 'UTF-8'
 }
 
@@ -79,19 +79,19 @@ artifacts {
 
 
 dependencies {
-	testImplementation 'junit:junit:4.12'
-	testImplementation 'com.google.code.gson:gson:2.8.2'
+	testImplementation 'junit:junit:4.13-beta-1'
+	testImplementation 'com.google.code.gson:gson:2.8.5'
 	testImplementation 'org.hamcrest:hamcrest-core:1.3'
 
 	implementation group: 'commons-logging', name: 'commons-logging', version: '1.2'
-	implementation group: 'org.json', name: 'json', version: '20171018' 
-	implementation 'it.unibo.alice.tuprolog:tuprolog:3.2.1'
+	implementation group: 'org.json', name: 'json', version: '20180813' 
+	implementation 'it.unibo.alice.tuprolog:tuprolog:3.3.0'
 	implementation 'org.beanshell:bsh-core:2.0b4'
-	implementation 'org.apache.commons:commons-compress:1.17'
+	implementation 'org.apache.commons:commons-compress:1.18'
 	implementation 'com.moparisthebest:junidecode:0.1.1'
 	implementation 'com.vividsolutions:jts-core:1.14.0'
 
-	implementation 'net.sf.kxml:kxml2:2.1.8'
+	implementation 'net.sf.kxml:kxml2:2.3.0'
 	
 
 	implementation fileTree(dir: "libs", include: ["*.jar"])
