--- a/OsmAnd-telegram/build.gradle
+++ b/OsmAnd-telegram/build.gradle
@@ -5,7 +5,7 @@ apply plugin: 'kotlin-android-extensions'
 
 android {
 	compileSdkVersion 28
-	buildToolsVersion "27.0.3"
+	buildToolsVersion "28.0.3"
 
 	sourceSets {
 		main {
@@ -23,7 +23,7 @@ android {
 	defaultConfig {
 		applicationId "net.osmand.telegram"
 		minSdkVersion 15
-		targetSdkVersion 27
+		targetSdkVersion 28
 		versionCode 1
 		versionCode System.getenv("APK_NUMBER_VERSION") ? System.getenv("APK_NUMBER_VERSION").toInteger() : versionCode
 		versionName "1.0"
@@ -135,15 +135,16 @@ dependencies {
 	implementation project(path: ':OsmAnd-java', configuration: 'android')
 	implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-	implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-	implementation 'com.android.support:appcompat-v7:28.0.0-rc01'
-	implementation 'com.android.support:design:28.0.0-rc01'
-	implementation 'com.android.support:customtabs:28.0.0-rc01'
-	implementation 'com.android.support:support-annotations:28.0.0-rc01'
+	implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+	implementation 'com.android.support:appcompat-v7:28.0.0'
+	implementation 'com.android.support:recyclerview-v7:28.0.0'
+	implementation 'com.android.support:design:28.0.0'
+	implementation 'com.android.support:customtabs:28.0.0'
+	implementation 'com.android.support:support-annotations:28.0.0'
+
 	implementation 'commons-logging:commons-logging-api:1.1'
-	implementation 'com.android.support:recyclerview-v7:28.0.0-rc01'
 	implementation 'com.vividsolutions:jts-core:1.14.0'
-	implementation("com.github.HITGIF:TextFieldBoxes:1.4.4") {
+	implementation('com.github.HITGIF:TextFieldBoxes:1.4.4', {
 		exclude group: 'com.android.support'
-	}
+	})
 }
