--- a/OsmAnd/build.gradle
+++ b/OsmAnd/build.gradle
@@ -29,8 +29,8 @@ task printc {
 }
 
 android {
-	compileSdkVersion 27
-	buildToolsVersion "27.0.3"
+	compileSdkVersion 28
+	buildToolsVersion "28.0.3"
 
 	signingConfigs {
 		development {
@@ -49,15 +49,15 @@ android {
 	}
 
 	defaultConfig {
-		minSdkVersion System.getenv("MIN_SDK_VERSION") ? System.getenv("MIN_SDK_VERSION").toInteger() :
-				 (analytics ? 15 : 14)
-		targetSdkVersion 26
+		applicationId "net.osmand"
+		minSdkVersion System.getenv("MIN_SDK_VERSION") ? System.getenv("MIN_SDK_VERSION").toInteger() : (analytics ? 15 : 14)
+		targetSdkVersion 28
 		versionCode 330
 		versionCode System.getenv("APK_NUMBER_VERSION") ? System.getenv("APK_NUMBER_VERSION").toInteger() : versionCode
-		multiDexEnabled true
 		versionName "3.3.0"
 		versionName System.getenv("APK_VERSION")? System.getenv("APK_VERSION").toString(): versionName
 		versionName System.getenv("APK_VERSION_SUFFIX")? versionName + System.getenv("APK_VERSION_SUFFIX").toString(): versionName
+		multiDexEnabled true
 	}
 
 	lintOptions {
@@ -138,29 +138,27 @@ android {
 		// Version
 		freedev {
 			dimension "version"
-			applicationId "net.osmand.dev"
+			applicationIdSuffix ".dev"
 			// resConfig "en"
 		}
 		free {
 			dimension "version"
-			applicationId "net.osmand"
 		}
 		freeres {
 			dimension "version"
-			applicationId "net.osmand"
 			resConfig "en"
 		}
 		freecustom {
 			dimension "version"
-			applicationId "net.osmand.freecustom"
+			applicationIdSuffix ".freecustom"
 		}
 		full {
 			dimension "version"
-			applicationId "net.osmand.plus"
+			applicationIdSuffix ".plus"
 		}
         fulldev {
             dimension "version"
-            applicationId "net.osmand.plus"
+            applicationIdSuffix ".plus"
             resConfig "en"
             //resConfigs "xxhdpi", "nodpi"
         }
@@ -366,32 +364,35 @@ dependencies {
 		implementation 'com.google.firebase:firebase-messaging:12.0.1'
 		implementation 'com.google.firebase:firebase-iid:12.0.1'
 		implementation 'com.google.firebase:firebase-config:12.0.1'
-		implementation 'com.facebook.android:facebook-android-sdk:4.31.0'	
+		implementation 'com.facebook.android:facebook-android-sdk:4.39.0'	
 	}
-	implementation 'com.android.support:multidex:1.0.1'
-	implementation 'com.android.support:gridlayout-v7:27.1.1'
-	implementation 'com.android.support:cardview-v7:27.1.1'
-	implementation 'com.android.support:appcompat-v7:27.1.1'
-	implementation 'com.android.support:design:27.1.1'
-	implementation 'com.android.support:customtabs:27.1.1'
+	implementation 'com.android.support:multidex:1.0.3'
+	implementation 'com.android.support:gridlayout-v7:28.0.0'
+	implementation 'com.android.support:cardview-v7:28.0.0'
+	implementation 'com.android.support:appcompat-v7:28.0.0'
+	implementation 'com.android.support:design:28.0.0'
+	implementation 'com.android.support:customtabs:28.0.0'
 	implementation fileTree(include:  ['gnu-trove-osmand.jar', 'icu4j-49_1_patched.jar'], dir: 'libs')
 
 	implementation group: 'commons-logging', name: 'commons-logging', version: '1.2'
 	implementation 'commons-codec:commons-codec:1.11'
-	implementation 'it.unibo.alice.tuprolog:tuprolog:3.2.1'
+	implementation 'it.unibo.alice.tuprolog:tuprolog:3.3.0'
 	implementation 'org.beanshell:bsh-core:2.0b4'
-	implementation 'org.apache.commons:commons-compress:1.17'
+	implementation 'org.apache.commons:commons-compress:1.18'
 	implementation 'com.moparisthebest:junidecode:0.1.1'
-	implementation 'org.immutables:gson:2.5.0'
+	implementation 'org.immutables:gson:2.7.4'
 	implementation 'com.vividsolutions:jts-core:1.14.0'
 
 	implementation 'com.squareup.picasso:picasso:2.71828'
+	//implementation 'com.squareup.picasso3:picasso:3.0.0-SNAPSHOT'
+
 	// JS core
-	implementation group: 'org.mozilla', name: 'rhino', version: '1.7.9'
+	implementation group: 'org.mozilla', name: 'rhino', version: '1.7.10'
 
 // size restrictions
-// implementation 'com.ibm.icu:icu4j:50.1' 
-// implementation 'net.sf.trove4j:trove4j:3.0.3'
+// implementation 'com.ibm.icu:icu4j:63.1'
+// implementation 'net.sf.trove4j:core:3.1.0'
+
 
 	qtcoreImplementation fileTree(include:  ['QtAndroid.jar', 'QtAndroidBearer.jar'], dir: 'libs')
 	qtcoredebugImplementation fileTree(include:  ['QtAndroid.jar', 'QtAndroidBearer.jar'], dir: 'libs')
@@ -401,13 +402,14 @@ dependencies {
 	qtcoredebugImplementation "net.osmand:OsmAndCore_android:0.1-SNAPSHOT@aar"
 	qtcoreImplementation "net.osmand:OsmAndCore_androidNativeRelease:0.1-SNAPSHOT@aar"
 	qtcoreImplementation "net.osmand:OsmAndCore_android:0.1-SNAPSHOT@aar"
-	implementation ("com.getkeepsafe.taptargetview:taptargetview:1.12.0"){
+
+	implementation ('com.getkeepsafe.taptargetview:taptargetview:1.12.0', {
 		exclude group: 'com.android.support'
-	}
-	implementation 'com.github.PhilJay:MPAndroidChart:v3.0.1'
-	implementation ("com.github.HITGIF:TextFieldBoxes:1.3.5"){
+	})
+	implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
+	implementation ('com.github.HITGIF:TextFieldBoxes:1.4.4', {
 		exclude group: 'com.android.support'
-	}
+	})
 }
 if(analytics) {
 	println "Apply GMS plugin"
