--- a/plugins/Osmand-SRTMPlugin/build.gradle
+++ b/plugins/Osmand-SRTMPlugin/build.gradle
@@ -1,8 +1,8 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 27
-    buildToolsVersion "27.0.3"
+    compileSdkVersion 28
+    buildToolsVersion "28.0.3"
 
 	signingConfigs {
 		development {
@@ -21,8 +21,11 @@ android {
 	}
 
 	defaultConfig {
+		applicationId "net.osmand.srtmPlugin.paid"
 		minSdkVersion 15
-		targetSdkVersion 27
+		targetSdkVersion 28
+		versionCode 9
+		versionName "1.0"
 	}
 
 	lintOptions {
@@ -69,8 +72,8 @@ dependencies {
 		implementation 'com.google.firebase:firebase-core:12.0.1'
 		implementation 'com.google.firebase:firebase-config:12.0.1'
 	}
-	implementation 'com.android.support:appcompat-v7:27.1.1'
-	implementation 'com.android.support:design:27.1.1'
+	implementation 'com.android.support:appcompat-v7:28.0.0'
+	implementation 'com.android.support:design:28.0.0'
 }
 
 if (analytics) {
