--- a/OsmAnd/AndroidManifest.xml
+++ b/OsmAnd/AndroidManifest.xml
@@ -157,20 +157,22 @@
 				<data android:pathPattern=".*\\..*\\..*\\..*\\..*\\.gpx" />
 			</intent-filter>
 
-			<intent-filter
-				android:label="@string/app_name"
-				android:priority="50">
-				<action android:name="android.intent.action.VIEW" />
-				<category android:name="android.intent.category.DEFAULT" />
-				<category android:name="android.intent.category.BROWSABLE" />
-				<data android:scheme="file"/>
-				<data android:host="*"/>
-				<data android:pathPattern=".*\\.kml" />
-				<data android:pathPattern=".*\\..*\\.kml" />
-				<data android:pathPattern=".*\\..*\\..*\\.kml" />
-				<data android:pathPattern=".*\\..*\\..*\\..*\\.kml" />
-				<data android:pathPattern=".*\\..*\\..*\\..*\\..*\\.kml" />
-			</intent-filter>
+			<!--<intent-filter-->
+				<!--android:label="@string/app_name"-->
+				<!--android:priority="50">-->
+				<!--<action android:name="android.intent.action.VIEW" />-->
+
+				<!--<category android:name="android.intent.category.DEFAULT" />-->
+				<!--<category android:name="android.intent.category.BROWSABLE" />-->
+				<!--<data android:scheme="file"/>-->
+				<!--<data android:host="*"/>-->
+				<!--<data android:pathPattern="*.kml"/>-->
+				<!--<data android:pathPattern=".*\\.kml" />-->
+				<!--<data android:pathPattern=".*\\..*\\.kml" />-->
+				<!--<data android:pathPattern=".*\\..*\\..*\\.kml" />-->
+				<!--<data android:pathPattern=".*\\..*\\..*\\..*\\.kml" />-->
+				<!--<data android:pathPattern=".*\\..*\\..*\\..*\\..*\\.kml" />-->
+			<!--</intent-filter>-->
 
 			<intent-filter
 				android:label="@string/app_name"
@@ -178,9 +180,12 @@
 				<action android:name="android.intent.action.VIEW" />
 				<category android:name="android.intent.category.DEFAULT" />
 				<category android:name="android.intent.category.BROWSABLE" />
+				<data android:scheme="content"/>
 				<data android:scheme="file"/>
+				<data android:scheme="data"/>
 				<data android:host="*"/>
 				<data android:mimeType="*/*"/>
+				<data android:pathPattern="*.kml"/>
 				<data android:pathPattern=".*\\.kml" />
 				<data android:pathPattern=".*\\..*\\.kml" />
 				<data android:pathPattern=".*\\..*\\..*\\.kml" />
@@ -271,9 +276,12 @@
 				<action android:name="android.intent.action.VIEW" />
 				<category android:name="android.intent.category.DEFAULT" />
 				<category android:name="android.intent.category.BROWSABLE" />
+				<data android:scheme="content"/>
 				<data android:scheme="file"/>
+				<data android:scheme="data"/>
 				<data android:host="*"/>
 				<data android:mimeType="*/*"/>
+				<data android:pathPattern="*.sqlitedb" />
 				<data android:pathPattern=".*\\.sqlitedb" />
 				<data android:pathPattern=".*\\..*\\.sqlitedb" />
 				<data android:pathPattern=".*\\..*\\..*\\.sqlitedb" />
