Rename tracksDbHelper to SavingTracksDbHelper and add ability to save as gpx

--- a/OsmAnd-telegram/build.gradle
+++ b/OsmAnd-telegram/build.gradle
@@ -146,4 +146,6 @@ dependencies {
 	implementation("com.github.HITGIF:TextFieldBoxes:1.4.4") {
 		exclude group: 'com.android.support'
 	}
+
+	implementation 'net.sf.kxml:kxml2:2.1.8'
 }
