Bugfixes (opening/importing KMZ files) #6376

--- a/OsmAnd/AndroidManifest.xml
+++ b/OsmAnd/AndroidManifest.xml
@@ -182,8 +182,11 @@
 				<action android:name="android.intent.action.VIEW" />
 				<category android:name="android.intent.category.DEFAULT" />
 				<category android:name="android.intent.category.BROWSABLE" />
+				<data android:scheme="content"/>
 				<data android:scheme="file"/>
+				<data android:scheme="data"/>
 				<data android:host="*"/>
+				<data android:mimeType="*/*"/>
 				<data android:pathPattern=".*\\.kmz" />
 				<data android:pathPattern=".*\\..*\\.kmz" />
 				<data android:pathPattern=".*\\..*\\..*\\.kmz" />
