--- a/OsmAnd-telegram/build.gradle
+++ b/OsmAnd-telegram/build.gradle
@@ -135,7 +135,7 @@ dependencies {
 	implementation project(path: ':OsmAnd-java', configuration: 'android')
 	implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-	implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+	implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 	implementation 'com.android.support:appcompat-v7:28.0.0-rc01'
 	implementation 'com.android.support:design:28.0.0-rc01'
 	implementation 'com.android.support:customtabs:28.0.0-rc01'
