--- a/OsmAnd-telegram/build.gradle
+++ b/OsmAnd-telegram/build.gradle
@@ -135,7 +135,7 @@ dependencies {
 	implementation project(path: ':OsmAnd-java', configuration: 'android')
 	implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-	implementation( "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.2.71") {
+	implementation( "org.jetbrains.kotlin:kotlin-stdlib-jdk:1.2.71") {
 		exclude group: 'org.jetbrains', module: 'annotations'
 	}
 	implementation 'com.android.support:appcompat-v7:28.0.0-rc01'
