--- a/OsmAnd-java/build.gradle
+++ b/OsmAnd-java/build.gradle
@@ -90,7 +90,7 @@ dependencies {
 	implementation 'org.apache.commons:commons-compress:1.17'
 	implementation 'com.moparisthebest:junidecode:0.1.1'
 	implementation 'com.vividsolutions:jts-core:1.14.0'
-
+	implementation 'com.atilika.kuromoji:kuromoji-ipadic:0.9.0'
 	implementation 'net.sf.kxml:kxml2:2.1.8'
 	
 
