--- a/OsmAnd-java/build.gradle
+++ b/OsmAnd-java/build.gradle
@@ -82,8 +82,8 @@ dependencies {
 	testImplementation 'junit:junit:4.12'
 	testImplementation 'com.google.code.gson:gson:2.8.2'
 	testImplementation 'org.hamcrest:hamcrest-core:1.3'
-	implementation 'commons-logging:commons-logging:1.2'
-	implementation 'org.json:json:20171018'
+	implementation group: 'commons-logging', name: 'commons-logging', version: '1.2'
+	implementation group: 'org.json', name: 'json', version: '20171018'
 	implementation 'it.unibo.alice.tuprolog:tuprolog:3.2.1'
 	implementation 'org.beanshell:bsh-core:2.0b4'
 	implementation 'org.apache.commons:commons-compress:1.17'
