--- a/OsmAnd/build.gradle
+++ b/OsmAnd/build.gradle
@@ -66,12 +66,6 @@ android {
 		warningsAsErrors false
 	}
 
-	packagingOptions {
-		exclude '/META-INF/CONTRIBUTORS.md'
-		exclude '/META-INF/LICENSE.md'
-		exclude '/META-INF/NOTICE.md'
-	}
-
 	// This is from OsmAndCore_android.aar - for some reason it's not inherited
 	aaptOptions {
 		// Don't compress any embedded resources
@@ -379,7 +373,7 @@ dependencies {
 		implementation 'com.google.firebase:firebase-messaging:12.0.1'
 		implementation 'com.google.firebase:firebase-iid:12.0.1'
 		implementation 'com.google.firebase:firebase-config:12.0.1'
-		implementation 'com.facebook.android:facebook-android-sdk:4.31.0'
+		implementation 'com.facebook.android:facebook-android-sdk:4.31.0'	
 	}
 	implementation 'com.android.support:multidex:1.0.1'
 	implementation 'com.android.support:gridlayout-v7:27.1.1'
@@ -387,8 +381,9 @@ dependencies {
 	implementation 'com.android.support:appcompat-v7:27.1.1'
 	implementation 'com.android.support:design:27.1.1'
 	implementation 'com.android.support:customtabs:27.1.1'
-	implementation fileTree(include: ['gnu-trove-osmand.jar', 'icu4j-49_1_patched.jar'], dir: 'libs')
-	implementation 'commons-logging:commons-logging:1.2'
+	implementation fileTree(include:  ['gnu-trove-osmand.jar', 'icu4j-49_1_patched.jar'], dir: 'libs')
+
+	implementation group: 'commons-logging', name: 'commons-logging', version: '1.2'
 	implementation 'commons-codec:commons-codec:1.11'
 	implementation 'it.unibo.alice.tuprolog:tuprolog:3.2.1'
 	implementation 'org.beanshell:bsh-core:2.0b4'
@@ -396,24 +391,28 @@ dependencies {
 	implementation 'com.moparisthebest:junidecode:0.1.1'
 	implementation 'org.immutables:gson:2.5.0'
 	implementation 'com.vividsolutions:jts-core:1.14.0'
+
 	implementation 'com.squareup.picasso:picasso:2.71828'
 	// JS core
-	implementation 'org.mozilla:rhino:1.7.9'
-	// size restrictions
-	// implementation 'com.ibm.icu:icu4j:50.1'
-	// implementation 'net.sf.trove4j:trove4j:3.0.3'
-	qtcoreImplementation fileTree(include: ['QtAndroid.jar', 'QtAndroidBearer.jar'], dir: 'libs')
-	qtcoredebugImplementation fileTree(include: ['QtAndroid.jar', 'QtAndroidBearer.jar'], dir: 'libs')
+	implementation group: 'org.mozilla', name: 'rhino', version: '1.7.9'
+
+// size restrictions
+// implementation 'com.ibm.icu:icu4j:50.1' 
+// implementation 'net.sf.trove4j:trove4j:3.0.3'
+
+	qtcoreImplementation fileTree(include:  ['QtAndroid.jar', 'QtAndroidBearer.jar'], dir: 'libs')
+	qtcoredebugImplementation fileTree(include:  ['QtAndroid.jar', 'QtAndroidBearer.jar'], dir: 'libs')
+
 	legacyImplementation "net.osmand:OsmAndCore_android:0.1-SNAPSHOT@jar"
 	qtcoredebugImplementation "net.osmand:OsmAndCore_androidNativeDebug:0.1-SNAPSHOT@aar"
 	qtcoredebugImplementation "net.osmand:OsmAndCore_android:0.1-SNAPSHOT@aar"
 	qtcoreImplementation "net.osmand:OsmAndCore_androidNativeRelease:0.1-SNAPSHOT@aar"
 	qtcoreImplementation "net.osmand:OsmAndCore_android:0.1-SNAPSHOT@aar"
-	implementation('com.getkeepsafe.taptargetview:taptargetview:1.12.0') {
+	implementation ("com.getkeepsafe.taptargetview:taptargetview:1.12.0"){
 		exclude group: 'com.android.support'
 	}
 	implementation 'com.github.PhilJay:MPAndroidChart:v3.0.1'
-	implementation('com.github.HITGIF:TextFieldBoxes:1.3.5') {
+	implementation ("com.github.HITGIF:TextFieldBoxes:1.3.5"){
 		exclude group: 'com.android.support'
 	}
 }
