--- a/OsmAnd/build.gradle
+++ b/OsmAnd/build.gradle
@@ -66,6 +66,12 @@ android {
 		warningsAsErrors false
 	}
 
+	packagingOptions {
+		exclude '/META-INF/CONTRIBUTORS.md'
+		exclude '/META-INF/LICENSE.md'
+		exclude '/META-INF/NOTICE.md'
+	}
+
 	// This is from OsmAndCore_android.aar - for some reason it's not inherited
 	aaptOptions {
 		// Don't compress any embedded resources
@@ -391,7 +397,7 @@ dependencies {
 	implementation 'com.moparisthebest:junidecode:0.1.1'
 	implementation 'org.immutables:gson:2.5.0'
 	implementation 'com.vividsolutions:jts-core:1.14.0'
-
+	implementation 'com.atilika.kuromoji:kuromoji-ipadic:0.9.0'
 	implementation 'com.squareup.picasso:picasso:2.71828'
 	// JS core
 	implementation group: 'org.mozilla', name: 'rhino', version: '1.7.9'
