Added indeterminate progress bar for public transport routing

--- a/OsmAnd/build.gradle
+++ b/OsmAnd/build.gradle
@@ -412,9 +412,9 @@ dependencies {
 	// turn off for now
 	//implementation 'com.atilika.kuromoji:kuromoji-ipadic:0.9.0'
 	implementation 'com.squareup.picasso:picasso:2.71828'
+	implementation 'me.zhanghai.android.materialprogressbar:library:1.4.2'
 	// JS core
 	implementation group: 'org.mozilla', name: 'rhino', version: '1.7.9'
-
 // size restrictions
 // implementation 'com.ibm.icu:icu4j:50.1' 
 // implementation 'net.sf.trove4j:trove4j:3.0.3'
