--- a/OsmAnd/build.gradle
+++ b/OsmAnd/build.gradle
@@ -31,6 +31,7 @@ task printc {
 android {
 	compileSdkVersion 27
 	buildToolsVersion "27.0.3"
+	// compileNdkVersion "android-ndk-r17b"
 
 	signingConfigs {
 		development {
