saving and edit new profile - work in progress

--- a/OsmAnd/AndroidManifest.xml
+++ b/OsmAnd/AndroidManifest.xml
@@ -1066,7 +1066,7 @@
       android:name=".profiles.SettingsProfileActivity"/>
 
 
-    <activity android:name=".profiles.SelectedProfileActivity"
+    <activity android:name=".profiles.EditProfileActivity"
         android:label="Application profiles"
         />
 
