Add property to exclude resources

--- a/OsmAnd-java/build.gradle
+++ b/OsmAnd-java/build.gradle
@@ -70,7 +70,9 @@ task androidJar(type: Jar) {
 }
 
 compileJava {
-    dependsOn collectExternalResources
+	if (!project.hasProperty('osmandCoreSimple')) {
+		dependsOn collectExternalResources
+	}
 }
 
 artifacts {
