--- a/OsmAnd-java/build.gradle
+++ b/OsmAnd-java/build.gradle
@@ -61,7 +61,11 @@ task collectExternalResources {
 }
 
 task androidJar(type: Jar) {
-	dependsOn collectExternalResources, build
+	if (!project.hasProperty('osmandCoreSimple')) {
+		dependsOn collectExternalResources, build
+	} else {
+		dependsOn build
+	}
 	appendix = "android"
 	from (sourceSets.main.java.outputDir) {
 		exclude("**/PlatformUtil.*")
