--- a/OsmAnd-turn_screen_on/src/main/AndroidManifest.xml
+++ b/OsmAnd-turn_screen_on/src/main/AndroidManifest.xml
@@ -13,9 +13,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".AdminDevicePermissionSetUpActivity"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
-        <activity android:name=".MainActivity"
+        <activity android:name=".PluginDescriptionActivity"></activity>
+        <activity
+            android:name=".PermissionsSetUpActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".MainActivity"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
