--- a/OsmAnd/AndroidManifest.xml
+++ b/OsmAnd/AndroidManifest.xml
@@ -866,6 +866,11 @@
 			</intent-filter>
 		</service>
 
+		<service
+			android:name="net.osmand.plus.download.DownloadService"
+			android:label="@string/process_downloading_service"
+			android:stopWithTask="false" />
+
 		<receiver android:name="net.osmand.plus.OnNavigationServiceAlarmReceiver" />
 		<receiver android:name="net.osmand.plus.notifications.NotificationDismissReceiver" />
 
