--- a/OsmAnd-Plugin-TurnScreenOn/src/main/AndroidManifest.xml
+++ b/OsmAnd-Plugin-TurnScreenOn/src/main/AndroidManifest.xml
@@ -8,9 +8,8 @@
     <application
         android:name=".app.TurnScreenApp"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/icon_turn_screen_on"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".OsmandInstallActivity"
