--- a/plugins/OsmAnd-TurnScreenOn/src/main/AndroidManifest.xml
+++ b/plugins/OsmAnd-TurnScreenOn/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="net.osmand.turnScreenOn">
 
     <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.GET_TASKS" />
 
     <application
         android:name=".app.TurnScreenApp"
@@ -11,8 +12,9 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        
         <activity android:name=".OsmandInstallActivity"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar"/>
         <activity
             android:name=".PluginDescriptionActivity"
             android:theme="@style/AppTheme.NoActionBar" />
