--- a/OsmAnd/build-library.gradle
+++ b/OsmAnd/build-library.gradle
@@ -38,7 +38,7 @@ afterEvaluate {
 	}
 }
 
-version = System.getenv("OSMAND_BINARIES_IVY_REVISION") ?: "master-snapshot"
+version = System.getenv("OSMAND_BINARIES_IVY_REVISION") ?: "4.5"
 project.afterEvaluate {
 	publishing {
 		repositories {
