Revert "Add version snapshot"
This reverts commit 016ab7abea5614cdf5eb9dc6d66796201e0fcb73.

--- a/OsmAnd/build-library.gradle
+++ b/OsmAnd/build-library.gradle
@@ -38,7 +38,7 @@ afterEvaluate {
 	}
 }
 
-version = System.getenv("OSMAND_BINARIES_IVY_REVISION") ?: "4.5"
+version = System.getenv("OSMAND_BINARIES_IVY_REVISION") ?: "master-snapshot"
 project.afterEvaluate {
 	publishing {
 		repositories {
