--- a/OsmAnd/build-common.gradle
+++ b/OsmAnd/build-common.gradle
@@ -110,6 +110,7 @@ clean.doFirst {
 	delete fileTree('assets') {
 		include '*.obf'
 		include 'fonts/**'
+		include 'feature_articles/**'
 		include 'voice/**'
 	}
 }
@@ -182,6 +183,19 @@ task collectHelpContentsStyle(type: Copy) {
 		include "style.css"
 	}
 	into "assets"
+}
+
+task collectHelpContentsAssets(type: Copy) {
+	from("../../help/website/help") {
+		include "about.html"
+		include "changes.html"
+		include "faq.html"
+		include "map-legend.html"
+	}
+	from("../../help/website/feature_articles") {
+		include "*.html"
+	}
+	into "assets/feature_articles"
 }
 
 task copyProjDb(type: Copy) {
@@ -279,6 +293,7 @@ task collectExternalResources {
 	dependsOn collectVoiceAssets,
 			collectFonts,
 			collectUiFonts,
+			collectHelpContentsAssets,
 			collectHelpContentsStyle,
 			copyMapShaderIcons,
 			copyMapPOIIcons,
