--- a/OsmAnd-api/build.gradle
+++ b/OsmAnd-api/build.gradle
@@ -8,7 +8,7 @@ android {
 
     defaultConfig {
         minSdkVersion 14
-        targetSdkVersion 31
+        targetSdkVersion 33
         versionCode 2
         versionName "2.0"
     }
@@ -52,7 +52,7 @@ afterEvaluate {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:support-annotations:28.0.0'
+    implementation 'androidx.annotation:annotation:1.6.0'
 }
 
 task sourcesJar(type: Jar) {
