--- a/OsmAnd-api/build.gradle
+++ b/OsmAnd-api/build.gradle
@@ -52,7 +52,7 @@ afterEvaluate {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:support-annotations:28.0.0'
+    implementation 'androidx.annotation:annotation:1.6.0'
 }
 
 task sourcesJar(type: Jar) {
