Try to add libraries to libs dir in apk

--- a/OsmAnd/libs/.gitignore
+++ b/OsmAnd/libs/.gitignore
@@ -1,11 +1,6 @@
-armeabi/*
-!armeabi/libsqlitejdbc.so
-x86/*
-!x86/libsqlitejdbc.so
-armeabi-v7a/*
-!armeabi-v7a/libsqlitejdbc.so
-arm64-v8a/*
-!arm64-v8a/libsqlitejdbc.so
-x86_64/*
-!x86_64/libsqlitejdbc.so
+armeabi/
+x86/
+armeabi-v7a/
 mips/
+arm64-v8a/
+x86_64/
