Unit test for rendering

--- a/OsmAnd-java/build.gradle
+++ b/OsmAnd-java/build.gradle
@@ -53,6 +53,9 @@ task collectTestResources(type: Copy) {
 	from("../../resources/test-resources") {
 		include "*"
 		include "/search/*"
+		include "/rendering/*"
+		include "/rendering/maps/*"
+		include "/rendering/geotiffs/*"
 	}
 	from("../../resources/poi") {
 		include "poi_types.xml"
