Tidy up routing tests (dictinct directory) #18093

--- a/OsmAnd-java/build.gradle
+++ b/OsmAnd-java/build.gradle
@@ -53,12 +53,12 @@ task collectTestResources(type: Copy) {
 	from("../../resources/test-resources") {
 		include "*"
 		include "/search/*"
+		include "/routing/*"
 	}
 	from("../../resources/poi") {
 		include "poi_types.xml"
 	}
 }
-
 
 processResources {
 	dependsOn collectRoutingResources,
