--- a/OsmAnd-api/build.gradle
+++ b/OsmAnd-api/build.gradle
@@ -24,7 +24,7 @@ android {
     }
 }
 
-version = System.getenv("OSMAND_BINARIES_IVY_REVISION") ?: "master-snapshot"
+version = System.getenv("OSMAND_BINARIES_IVY_REVISION") ?: "4.6"
 afterEvaluate {
     publishing {
         repositories {    
