--- a/OsmAnd/build-library.gradle
+++ b/OsmAnd/build-library.gradle
@@ -37,7 +37,7 @@ afterEvaluate {
 	}
 }
 
-version = System.getenv("OSMAND_BINARIES_IVY_REVISION") ?: "master-snapshot"
+version = System.getenv("OSMAND_BINARIES_IVY_REVISION") ?: "4.6"
 project.afterEvaluate {
 	publishing {
 		repositories {
