Revert "Add 4.6 version"
This reverts commit 6a131fdc00ad661a0d0d3b424d58a2cd5cc3de7a.

--- a/OsmAnd/build-library.gradle
+++ b/OsmAnd/build-library.gradle
@@ -37,7 +37,7 @@ afterEvaluate {
 	}
 }
 
-version = System.getenv("OSMAND_BINARIES_IVY_REVISION") ?: "4.6"
+version = System.getenv("OSMAND_BINARIES_IVY_REVISION") ?: "master-snapshot"
 project.afterEvaluate {
 	publishing {
 		repositories {
