--- a/OsmAnd-java/build.gradle
+++ b/OsmAnd-java/build.gradle
@@ -103,7 +103,7 @@ artifacts {
 	android androidJar
 }
 
-version = System.getenv("OSMAND_BINARIES_IVY_REVISION") ?: "4.6"
+version = System.getenv("OSMAND_BINARIES_IVY_REVISION") ?: "master-snapshot"
 publishing {
 	repositories {
 		ivy {
